[package]
name = "oscae-viktoe-cryptography"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["server", "client", "shared"]

[[bin]]
name = "client"
path = "./client/src/main.rs"

[[bin]]
name = "server"
path = "./server/src/main.rs"

[dependencies]
sha2 = "0.10"       # secure hashing
rand = "0.8"        # random number generation
aes-gcm = "0.10"    # symmetric encryption
argon2 = "0.5"      # password hashing
