[package]
name = "oscae-viktoe-cryptography"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["server", "client", "shared"]

[[bin]]
name = "client"
path = "./client/src/main.rs"

[[bin]]
name = "server"
path = "./server/src/main.rs"

[dependencies]
sha2 = "0.10"       # secure hashing
rand = "0.8"        # random number generation
aes-gcm = "0.10"    # symmetric encryption
argon2 = "0.5"      # password hashing
actix-web = "4.9.0"
rusqlite = { version = "0.33.0", features = ["bundled"] }
rs_merkle = "1.4.2"
base64 = "0.22.1"
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.138"
shared = { path = "./shared" }
clap = { version = "4.5.27", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
